--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6371,7 +6371,7 @@ a {
     border-left: 2px solid #FD7E14;
     background: rgba(0, 0, 0, 0.137); }
     #slideMenu ul .active a {
-      color: #FD7E14; }
+      color: #F8F9FA; }
   #slideMenu ul li {
     border-left: 4px solid #152A49; }
     #slideMenu ul li a {
@@ -6458,6 +6458,70 @@ a {
 .hvr-float:hover, .hvr-float:focus, .hvr-float:active {
   -webkit-transform: translateY(-8px);
   transform: translateY(-8px); }
+
+.navbar-nav .slide-nave-toggle {
+  height: 30px;
+  margin-top: 5px;
+  margin-left: 15px; }
+
+#slideNavToggle {
+  width: 34px;
+  height: 100%;
+  /* position: relative; */
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer; }
+
+#slideNavToggle span {
+  display: block;
+  position: absolute;
+  height: 1.5px;
+  width: 90%;
+  background: #fff;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out; }
+
+#slideNavToggle span:nth-child(1) {
+  top: 9px; }
+
+#slideNavToggle span:nth-child(2) {
+  top: 17px; }
+
+#slideNavToggle span:nth-child(3) {
+  top: 25px; }
+
+#slideNavToggle.open span:nth-child(1) {
+  top: 14px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg); }
+
+#slideNavToggle.open span:nth-child(2) {
+  opacity: 0;
+  left: -50px; }
+
+#slideNavToggle.open span:nth-child(3) {
+  top: 14px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg); }
 
 /* 
 Home Page
@@ -6573,9 +6637,12 @@ Pricing Page
     #pricing #pricingTabContent .slick-slider .slick-prev {
       left: -0%; }
   #pricing #pricingTabContent .card {
-    min-width: 300px; }
+    min-width: 300px;
+    border-radius: 10px;
+    border: none; }
     #pricing #pricingTabContent .card .card-header {
       background: linear-gradient(to right, #0099FF, #6F42C1);
+      border-radius: 10px 10px 0 0;
       color: #E9ECEF; }
   #pricing #pricingTabContent .card:focus {
     outline: none;
@@ -6695,6 +6762,49 @@ Get Started Page Page
     padding-bottom: 20px; }
   #getStarted #form .card {
     height: 98%;
-    border: none; }
+    border: none;
+    border-radius: 10px; }
     #getStarted #form .card .card-body {
       height: 100%; }
+
+/* 
+Get Started Page Page
+==============================================================================================================================================================
+*/
+#briefSubmited {
+  overflow-x: hidden;
+  background: #F8F9FA; }
+  #briefSubmited .navbar {
+    background: #152A49; }
+  #briefSubmited #contentWrap {
+    height: calc(100vh - 120px); }
+  #briefSubmited .footer-bottom {
+    height: calc(100vh - 690px); }
+  #briefSubmited .card {
+    border: none; }
+  #briefSubmited #mainFooter {
+    margin-top: 50px; }
+
+/* 
+Get Started Page Page
+==============================================================================================================================================================
+*/
+#loginPage {
+  background: linear-gradient(to right, #0099FF, #6F42C1); }
+  #loginPage .navbar {
+    background: #152A49; }
+  #loginPage #contentWrap .container .row {
+    height: calc(100vh - 57px); }
+    #loginPage #contentWrap .container .row .col-12 {
+      margin-top: -250px; }
+      #loginPage #contentWrap .container .row .col-12 .card {
+        width: 500px;
+        border-radius: 10px;
+        border: none;
+        background: #F8F9FA; }
+        #loginPage #contentWrap .container .row .col-12 .card .password-input {
+          position: relative; }
+          #loginPage #contentWrap .container .row .col-12 .card .password-input .password-eye {
+            position: absolute;
+            right: 20px;
+            top: 30%; }
