--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,7 +30,6 @@ $btn-padding-x-sm:            30px !default;
 $btn-border-radius-sm:        30px !default;
 
 
-
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 @import url("https://use.typekit.net/zdm1ats.css");
@@ -101,7 +100,7 @@ a {
     .active {
       border-left: 2px solid $info;
       background: rgba(0, 0, 0, 0.137); 
-      a { color: $info; }
+      a { color: $lighter; }
     }
     li {
       border-left: 4px solid $dark;
@@ -208,6 +207,80 @@ a {
 .hvr-float:hover, .hvr-float:focus, .hvr-float:active {
   -webkit-transform: translateY(-8px);
   transform: translateY(-8px);
+}
+
+// _____________________ Hamburger Animation _____________________
+.navbar-nav .slide-nave-toggle {
+  height: 30px;
+  margin-top: 5px;
+  margin-left: 15px;
+} 
+
+#slideNavToggle {
+  width: 34px;
+  height: 100%;
+  /* position: relative; */
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+#slideNavToggle span {
+  display: block;
+  position: absolute;
+  height: 1.5px;
+  width: 90%;
+  background: #fff;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#slideNavToggle span:nth-child(1) {
+  top: 9px;
+}
+
+#slideNavToggle span:nth-child(2) {
+  top: 17px;
+}
+
+#slideNavToggle span:nth-child(3) {
+  top: 25px;
+}
+
+#slideNavToggle.open span:nth-child(1) {
+  top: 14px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+#slideNavToggle.open span:nth-child(2) {
+  opacity: 0;
+  left: -50px;
+}
+
+#slideNavToggle.open span:nth-child(3) {
+  top: 14px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
 }
 
 /* 
@@ -364,8 +437,11 @@ Pricing Page
     }
     .card {
       min-width: 300px;
+      border-radius: 10px;
+      border: none;
       .card-header {
         background: $gradient;
+        border-radius: 10px 10px 0 0;
         color: $light;
       }
     }
@@ -546,18 +622,68 @@ Get Started Page Page
     .card {
       height: 98%;
       border: none;
+      border-radius: 10px;
       .card-body {
         height: 100%;
       }
     }
   }
 }
-// @media (max-width: 1200px) {
-//   #getStarted {
-//     #form {
-//       .card {
-//         height: 85%;
-//       }
-//     }
-//   }
-// }
+/* 
+Get Started Page Page
+==============================================================================================================================================================
+*/ 
+#briefSubmited {
+  overflow-x: hidden;
+  background: $lighter;
+  .navbar {
+    background: $dark;
+  }
+  #contentWrap {
+    height: calc(100vh - 120px); 
+  }
+  .footer-bottom {
+    height: calc(100vh - 690px); 
+  }
+  .card {
+    border: none;
+  }
+  #mainFooter {
+    margin-top: 50px;
+    
+  }
+}
+/* 
+Get Started Page Page
+==============================================================================================================================================================
+*/ 
+#loginPage {
+  background: $gradient;
+  .navbar {
+    background: $dark;
+  }
+  #contentWrap{
+    .container {
+      .row {
+        height: calc(100vh - 57px);
+        .col-12 {
+          margin-top: -250px;
+          .card {
+            width: 500px;
+            border-radius: 10px;
+            border: none;
+            background: $lighter;
+            .password-input {
+              position: relative;
+              .password-eye {
+                position: absolute;
+                right: 20px;
+                top: 30%;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
